<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="bottom|right"
                android:lines="4"
                android:text="@string/String0"
                android:textSize="36sp" />

            <TableLayout
                android:id="@+id/numPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="right">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonDel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringDel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@android:color/holo_red_light"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringClear"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@android:color/holo_red_light"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:soundEffectsEnabled="false">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/String1"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/String2"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/String3"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringAdd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@color/teal_700"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetBottom="0dp"
                        android:text="@string/String4"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/String5"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/String6"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringSub"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@color/teal_700"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetBottom="0dp"
                        android:text="@string/String7"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/String8"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetBottom="0dp"
                        android:text="@string/String9"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonMul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringMul"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@color/teal_700"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonDot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringDot"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/String0"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonEqual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringEqual"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:backgroundTint="@android:color/holo_green_light"
                        app:cornerRadius="0dp"
                        app:elevation="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonDiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/StringDiv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        app:cornerRadius="0dp"
                        app:elevation="0dp"
                        app:backgroundTint="@color/teal_700" />
                </TableRow>

            </TableLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>